Conclusãocifra de Cezar

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <label for="idCifrar">Criptografar</label>
 
             <input type="radio" name="radEscolha" id="idDesCriptografar">
-            <label for="idDesCriptografar">DesCriptografar</label>
+            <label for="idDesCriptografar">Descriptografar</label>
             <!------------------------------------------------------------>
 
             <!--Chave criptografica e botão de execusão-->
